--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "connect": "^3.7.0",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.1.0",
     "express": "^4.18.2",
     "moment": "^2.30.1"
   }
